# ntmg

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
ntmg/: __init__.py
tests/: requirements.txt  test.py
